--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,39 +2,41 @@
     margin: 0px;
     color: aliceblue;
 }
+body {
+    height:100%;
+}
 .row{
     margin: 0px 0px;
     height: 100px;
     width: auto;
-   
-  
- 
+    font-size:20px;
+
 }
 .row .responsive .col{
     width: 100px;
     height: 100%;
     text-align:center;
-    padding: 15px; 
+    padding: 15px;
     padding-top: 25px;
     transition: background-color 1s;
-    transition: font-size 0.1s;  
+    transition: font-size 0.1s;
 }
 .row .col{
-   
+
     width: 100%;
     height: 100%;
     text-align:center;
-    padding: 15px; 
+    padding: 15px;
     padding-top: 25px;
     transition: background-color 1s;
-    transition: font-size 0.1s;  
+    transition: font-size 0.1s;
 }
 .icon{
     display: none;
 }
 .row .col:hover{
 background-color: hsla(216, 76%, 52%, 0.671);
-font-size: large;
+font-size: 25px;
 }
 
  img{
@@ -43,7 +45,7 @@ font-size: large;
         margin: 0px;
         margin-right: 87%;
     }
-    
+
     .row{
         background-color:#1560bd;
     }
@@ -58,7 +60,7 @@ font-size: large;
             position: relative;
             bottom: 65%;
             margin-right: 40px;
-          
+
           }
           .row .img{
               margin: 0px;
@@ -105,7 +107,7 @@ right: 5%;
             display: block;
             text-align: left;
           }
-         
+
           .row .responsive{position: relative;}
           img{
             width: 100px;
@@ -117,11 +119,11 @@ right: 5%;
             right: 0;
             top: 0;
         }
-       
+
           .row .responsive .col{
             float: none;
             display: block;
-           
+
           }
         .col{
             text-align: center;
@@ -136,5 +138,5 @@ right: 5%;
     display: block;
     text-align: left;
   }
-          
+
     }
