--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,138 +5,35 @@
  body {
     height:auto;
 }
-.row{
-    margin: 0px 0px;
-    height: 100px;
-    width: 100%;
-    font-size:20px;
 
-}
-.row .responsive .col{
-    width: 100px;
-    height: 100%;
-    text-align:center;
-    padding: 15px;
-    padding-top: 25px;
-    transition: background-color 1s;
-    transition: font-size 0.1s;
-}
-.row .col{
-
-    width: 100%;
-    height: 100%;
-    text-align:center;
-    padding: 15px;
-    padding-top: 25px;
-    transition: background-color 1s;
-    transition: font-size 0.1s;
-}
-.icon{
-    display: none;
-}
-.row .col:hover{
-background-color: hsla(216, 76%, 52%, 0.671);
-font-size: 25px;
+#title{
+    color:black;
+    font-size:25px;
 }
 
- img{
-        width: 100%;
-        height: 100%;
-        margin: 0px;
-        margin-right: 87%;
-    }
+#droplist{
+    background-color:#303983;
+    border-radius:5px;
+    height:auto;
+    width:150px;
+    font-size:12px;
+}
 
-    .row{
-        background-color:#1560bd;
-    }
-    @media only screen and (max-width: 768px) {
-        .row .col:not(:first-child) {display: none;}
-          .row .col-sm-4{
-              display: none;
-          }
-          .row a.icon {
-            float: right;
-            display: block;
-            position: relative;
-            bottom: 65%;
-            margin-right: 40px;
+#droplist :hover{
+    background-color:#e53624;
+}
 
-          }
-          .row .img{
-              margin: 0px;
-              position: relative;
-bottom: 60%;
-right: 5%;
-          }
-          #logo{
-              height: 100px;
-          }
-    }
-    @media only screen and (max-width: 768px) {
-       /* .row{
-            height: 30%;
-            width: 100%;
-            flex-direction: column;
-            align-items: center;
-        }
-        .col{
-            text-align: center;
-        }
-        img{
-            width: 100px;
-            height: 100px;
-        }
-        .row .icon {
-            position: absolute;
-            right: 0;
-            top: 0;
-          }
-        .row .icon{
-            float: none;
-            display: block;
-            text-align: left;
-          }*/
-          .row{
-            height: 30%;
-            width: 100%;
-            flex-direction: column;
-            align-items: center;
-        }
-        .row .responsive{
-            float: none;
-            display: block;
-            text-align: left;
-          }
+#navelements{
+    width:90px;
+    border-radius:5px;
+}
 
-          .row .responsive{position: relative;}
-          img{
-            width: 100px;
-            height: 100px;
+#dropmenu{
+    background-color:#303983;
+}
 
-        }
-        .row .responsive .icon{
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-
-          .row .responsive .col{
-            float: none;
-            display: block;
-
-          }
-        .col{
-            text-align: center;
-        }
-  .row .responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .row .responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-    }
+.dropdown-menu>li>a:hover{
+    background: color #e53624;
+}
+    
+    
