--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -11,16 +11,40 @@
   animation-direction:alternate;
   padding:10px;
 }
+.event-name{
+  height:30px;
+}
+
+.links{
+  color:white;
+}
 
 #desp{
   color:black;
   font-size:15px;
+  position:relative;
+  overflow:auto;
+}
+.child{
+  top:40px;
+  bottom: 0px;
+  left: 0px;
+  border: 1px solid white;
+  overflow: auto;
+  cursor:pointer;
+  padding-left:20px;
+}
+
+#hero{
+  border-color:#303983;border-style:solid none solid solid;border-radius:5px;
 }
 
 #poster{
-  height:220px;
+  height:290px;
   width:100%;
   padding:10px;
+  border-radius:5px;
+  border-color:red;
 }
 
 #element{
@@ -45,9 +69,14 @@ span{
 
 #ename{
     font-size:20px;
-    color:red;
-    padding-top:10px;
-    padding-left:40px;
+    padding:5px;
+    margin:5px;
+    margin-bottom:0px;
+    color:blue;
+    text-align:center;
+    border-color:blue;
+    border-style:solid solid solid solid;
+    border-radius:5px;
 }
 
 #wel {
@@ -64,6 +93,23 @@ span{
       filter: blur(1px);
 }
 
-#wel:hover{
+::-webkit-scrollbar {
+  width: 7px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
 }
