--- a/public/css/volunteers.css
+++ b/public/css/volunteers.css
@@ -22,14 +22,15 @@ body, html {
 }
 
 .tabcontent {
-  color: white;
+  /* color: white; */
   display: none;
-  padding: 100px 20px;
+  padding: 100px 20px 30px;
+  margin: 30px auto;
   height: 100%;
 }
 
 #unit1,#unit2,#unit3,#unit4,#unit5,#unit6,#unit7 {
-    background-color: white;
+    background-color: #fafafa;
 }
 
 table {
@@ -42,7 +43,7 @@ table {
     text-align: center;
   }
 
-  tr:nth-child(even){background-color: #f2f2f2;}
+  tr:nth-child(even){background-color: white;}
 
 th{
     padding-top: 12px;
